# codes

./: .gitignore
.github/workflows/: ci.yml
assembly/: Makefile  msg  msg.asm
grpc_example_library/: CMakeLists.txt  main.cpp
grpc_example_library/grpcClientLibrary/: CMakeLists.txt  ToxicityClassifierClientConfig.cmake.in  client.cpp  client.hpp  toxicity_classifier.grpc.pb.cc  toxicity_classifier.grpc.pb.h  toxicity_classifier.pb.cc  toxicity_classifier.pb.h  toxicity_classifier.proto
grpc_example_library/server_grpc/: server.py  toxicity_classifier_pb2.py  toxicity_classifier_pb2_grpc.py
qt_server/: .gitignore  CMakeLists.txt  client.cpp  client.hpp  item.hpp  main.cpp  qtserver.code-workspace  server.cpp  server.hpp
qt_server/qt_game_server/client/: CMakeLists.txt  client.cpp  client.hpp  item.hpp  main.cpp  qt_game_client.code-workspace
qt_server/qt_game_server/server/: CMakeLists.txt  item.hpp  main.cpp  server.cpp  server.hpp
qt_server/qt_server_client/: CMakeLists.txt  client.cpp  client.hpp  item.hpp  main.cpp  qt_server_client.code-workspace  server.cpp  server.hpp
telemetry/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml
telemetry/.github/workflows/: ci.yml
telemetry/bin-output/: telemetry_client  unit_tests
telemetry/build-output/: CMakeCache.txt  Makefile  cmake_install.cmake
telemetry/build-output/client/: Makefile  cmake_install.cmake
telemetry/build-output/common/: Makefile  cmake_install.cmake
telemetry/build-output/server/: Makefile  cmake_install.cmake  telemetry_server
telemetry/build-output/tests/: Makefile  cmake_install.cmake
telemetry/client/: CMakeLists.txt  cli_interface.cpp  cli_interface.hpp  main.cpp  udp_client.cpp  udp_client.hpp
telemetry/common/: CMakeLists.txt  network_utils.cpp  network_utils.hpp  protocol.cpp  protocol.hpp
telemetry/server/: data_validator.cpp  data_validator.hpp  limits.json  udp_server.cpp  udp_server.hpp
telemetry/tests/: CMakeLists.txt  functional_tests.cpp  unit_tests.cpp
telemetry/tests/functional_tests/: functional_tests.cpp
telemetry/tests/functional_tests/test_data/: invalid_accel_input.txt  invalid_accel_output.txt  invalid_x_input.txt  invalid_x_output.txt  invalid_y_input.txt  min_values_input.txt  min_values_output.txt  reserved_field_test_input.txt  valid_data_input.txt  valid_data_output.txt
telemetry/tests/functional_tests/test_scripts/: run_client.sh
test_tasks/BMPImage/: CMakeLists.txt  bmpimage.cpp  bmpimage.h  main.cpp
test_tasks/BMPImages/: CMakeLists.txt  bmpimage.cpp  bmpimage.h  bmpimage.hpp  main.cpp
